Fixed the footed being way too high on pages with little content.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,10 +6,18 @@
 body{
   overflow-y: scroll;
   overflow-x: hidden;
+  min-height: 100vh;
+  position: relative;
 }
 
-header, footer{
+header, 
+footer{
   width: 100%;
+}
+
+footer{
+  position: absolute;
+  bottom: -200px;
 }
 
 a{
